--- a/frontend/src/templates/edit-incomes-costs.html
+++ b/frontend/src/templates/edit-incomes-costs.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="col py-3  create-incomes main-container">
-                <div class="main-page-text">Создание дохода и расхода</div>
+                <div class="main-page-text">Редактирование дохода и расхода</div>
                 <div class="create-income-input ">
                     <input type="text" class="form-control " placeholder="Доход">
                     <input type="text" class="form-control " placeholder="Зарплата">
