--- a/frontend/src/templates/incomes.html
+++ b/frontend/src/templates/incomes.html
@@ -90,6 +90,7 @@
                     </div>
                 </div>
             </div>
+            <div class="overlay"></div>
             <div class="popup-container">
                 <div class="popup-title">
                     Вы действительно хотите удалить категорию?
