--- a/frontend/src/styles/incomes-costs.scss
+++ b/frontend/src/styles/incomes-costs.scss
@@ -34,10 +34,10 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1000;
- // display: none;
+  display: none;
 }
 .popup-container {
-  //display: none;
+  display: none;
   position: absolute;
   top: 430px;
   right: 450px;
