--- a/frontend/src/templates/edit-costs.html
+++ b/frontend/src/templates/edit-costs.html
@@ -11,7 +11,7 @@
           <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start menu" id="menu">
 
             <li>
-              <a href="#submenu1" data-bs-toggle="collapse" class="nav-link active px-2 d-flex align-items-center">
+              <a href="#submenu1" data-bs-toggle="collapse" class="nav-link active px-2 d-flex align-items-center submenu-cat collapsed">
                 <svg width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M1.5 12.3964V5.89641H2.5V12.3964C2.5 12.6726 2.72386 12.8964 3 12.8964H12C12.2761 12.8964 12.5 12.6726 12.5 12.3964V5.89641H13.5V12.3964C13.5 13.2248 12.8284 13.8964 12 13.8964H3C2.17157 13.8964 1.5 13.2248 1.5 12.3964Z" fill="#052C65"/>
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M12.5 1.39641V4.89641L10.5 2.89641V1.39641C10.5 1.12027 10.7239 0.896409 11 0.896409H12C12.2761 0.896409 12.5 1.12027 12.5 1.39641Z" fill="#052C65"/>
@@ -33,7 +33,7 @@
             <li>
               <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-2 align-middle collapsed">
                 <span class="ms-1 d-none d-sm-inline color-blue category">Категории</span><i class="fas fa-chevron-down color-blue arrow-icon"></i> </a>
-              <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
+              <ul class="collapse submenu-ul nav flex-column" id="submenu3" data-bs-parent="#menu">
                 <li class="w-100">
                   <a href="#" class="nav-link px-2"> <span class="d-none d-sm-inline color-blue">Доходы</span></a>
                 </li>
