--- a/frontend/src/templates/incomes-costs.html
+++ b/frontend/src/templates/incomes-costs.html
@@ -31,9 +31,9 @@
                         </li>
 
                         <li>
-                            <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-2 align-middle collapsed">
+                            <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-2 align-middle collapsed submenu-cat">
                                 <span class="ms-1 d-none d-sm-inline color-blue category">Категории</span><i class="fas fa-chevron-down color-blue arrow-icon"></i> </a>
-                            <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
+                            <ul class="collapse submenu-ul nav flex-column" id="submenu3" data-bs-parent="#menu">
                                 <li class="w-100">
                                     <a href="#" class="nav-link px-2"> <span class="d-none d-sm-inline color-blue">Доходы</span></a>
                                 </li>
@@ -63,24 +63,24 @@
                     <button type="button" class="btn btn-success">Создать доход</button>
                     <button type="button" class="btn btn-danger">Создать расход</button>
                 </div>
-                <div class="incomes-costs-buttons ">
+                <div class="incomes-costs-buttons d-flex align-items-baseline">
                     <button type="button" class="btn btn-outline-secondary">Сегодня</button>
                     <button type="button" class="btn btn-outline-secondary">Неделя</button>
                     <button type="button" class="btn btn-outline-secondary">Месяц</button>
                     <button type="button" class="btn btn-outline-secondary">Год</button>
                     <button type="button" class="btn btn-outline-secondary">Все</button>
                     <button type="button" class="btn btn-outline-secondary">Интервал</button>
-                    <div class=" date-range-container ">
+                    <div class=" date-range-container d-flex align-items-baseline ">
                         <form>
-                            <div class="mb-3 d-flex align-items-center">
+                            <div class="mb-3 d-flex align-items-baseline">
                                 <span class="pe-3">с</span>
-                                <input type="date" class="form-control" id="dateInput" placeholder="Выберите дату">
+                                <input type="text" class="form-control date-input" id="dateInput" placeholder="Дата" onfocus="(this.type='date')" onblur="(this.type='text')">
                             </div>
                         </form>
                         <form>
-                            <div class="mb-3  d-flex align-items-center">
+                            <div class="mb-3  d-flex align-items-baseline">
                                 <span class="pe-3">по</span>
-                                <input type="date" class="form-control" id="dateInput2" placeholder="Выберите дату">
+                                <input type="text" class="form-control date-input" id="dateInput2" placeholder="Дата" onfocus="(this.type='date')" onblur="(this.type='text')">
                             </div>
                         </form>
                     </div>
