--- a/frontend/src/templates/create-incomes-costs.html
+++ b/frontend/src/templates/create-incomes-costs.html
@@ -31,9 +31,9 @@
                         </li>
 
                         <li>
-                            <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-2 align-middle collapsed">
+                            <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-2 align-middle collapsed submenu-cat">
                                 <span class="ms-1 d-none d-sm-inline color-blue category">Категории</span><i class="fas fa-chevron-down color-blue arrow-icon"></i> </a>
-                            <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
+                            <ul class="collapse submenu-ul nav flex-column" id="submenu3" data-bs-parent="#menu">
                                 <li class="w-100">
                                     <a href="#" class="nav-link px-2"> <span class="d-none d-sm-inline color-blue">Доходы</span></a>
                                 </li>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="mb-3 date-input-container">
 
-                        <input type="date" class="form-control" id="dateInputDate">
+                        <input type="text" class="form-control" id="dateInputDate" placeholder="11.09.2022" onfocus="(this.type='date')" onblur="(this.type='text')">
                     </div>
                     <div class="mb-3">
                         <textarea class="form-control" id="commentInput" rows="1" placeholder="Комментарий..."></textarea>
