--- a/frontend/src/templates/incomes.html
+++ b/frontend/src/templates/incomes.html
@@ -31,9 +31,9 @@
                         </li>
 
                         <li>
-                            <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-2 align-middle">
+                            <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-2 align-middle submenu-cat collapsed">
                                 <span class="ms-1 d-none d-sm-inline color-blue">Категории</span><i class="fas fa-chevron-right ms-5 color-blue arrow-icon"></i> </a>
-                            <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
+                            <ul class="collapse submenu-ul nav flex-column" id="submenu3" data-bs-parent="#menu">
                                 <li class="w-100">
                                     <a href="#" class="nav-link px-2"> <span class="d-none d-sm-inline color-blue">Доходы</span></a>
                                 </li>
