--- a/frontend/src/templates/main.html
+++ b/frontend/src/templates/main.html
@@ -31,9 +31,9 @@
                         </li>
 
                         <li>
-                            <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-2 align-middle collapsed">
+                            <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-2 align-middle collapsed submenu-cat ">
                                 <span class="ms-1 d-none d-sm-inline color-blue category">Категории</span><i class="fas fa-chevron-down color-blue arrow-icon"></i> </a>
-                            <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
+                            <ul class="collapse submenu-ul nav flex-column " id="submenu3" data-bs-parent="#menu">
                                 <li class="w-100">
                                     <a href="#" class="nav-link px-2"> <span class="d-none d-sm-inline color-blue">Доходы</span></a>
                                 </li>
@@ -70,13 +70,13 @@
                             <form>
                                 <div class="mb-3 d-flex align-items-center">
                                     <span class="pe-3">с</span>
-                                    <input type="date" class="form-control" id="dateInput" placeholder="Выберите дату">
+                                    <input type="text" class="form-control date-input" id="dateInput" placeholder="Дата" onfocus="(this.type='date')" onblur="(this.type='text')">
                                 </div>
                             </form>
                             <form>
                                 <div class="mb-3  d-flex align-items-center">
                                     <span class="pe-3">по</span>
-                                    <input type="date" class="form-control" id="dateInput2" placeholder="Выберите дату">
+                                    <input type="text" class="form-control date-input" id="dateInput2" placeholder="Дата" onfocus="(this.type='date')" onblur="(this.type='text')">
                                 </div>
                             </form>
                         </div>
