--- a/frontend/src/templates/layout.html
+++ b/frontend/src/templates/layout.html
@@ -57,8 +57,8 @@
                 </div>
             </div>
 
-            <div class="col py-3 container">
-                <div class="main-page-text">Главная</div>
+            <div id="content-layout">
+
 
             </div>
         </div>
