changed login & router

--- a/frontend/src/templates/auth/sign-up.html
+++ b/frontend/src/templates/auth/sign-up.html
@@ -34,7 +34,7 @@
                             <span class="input-group-text">
                                 <i class="fas fa-lock"></i>
                             </span>
-                        <input type="text" class="form-control is-invalid" id="password" placeholder="Пароль" aria-label="password"  required aria-describedby="basic-addon2">
+                        <input type="password" class="form-control is-invalid" id="password" placeholder="Пароль" aria-label="password"  required aria-describedby="basic-addon2">
                         <div class="invalid-feedback" id="invalid-feedback3">
                             Пожалуйста, введите правильный пароль.
                         </div>
@@ -43,7 +43,7 @@
                             <span class="input-group-text">
                                 <i class="fas fa-lock"></i>
                             </span>
-                        <input type="text" class="form-control is-invalid" id="password-repeat" placeholder="Подтверждение пароля" aria-label="password"  required aria-describedby="basic-addon3">
+                        <input type="password" class="form-control is-invalid" id="password-repeat" placeholder="Подтверждение пароля" aria-label="password"  required aria-describedby="basic-addon3">
                         <div class="invalid-feedback" id="invalid-feedback4">
                             Пожалуйста, подтвердите пароль.
                         </div>
