--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -220,3 +220,31 @@ h2 {
   color: #6C757D;
   font-size: 16px;
 }
+.user-menu {
+  position: relative;
+  display: inline-block;
+}
+
+.popup-menu {
+  display: none;
+  position: absolute;
+  left: 20px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+     button {
+    background: none;
+    border: none;
+    padding: 10px;
+    text-align: left;
+    width: 100%;
+    cursor: pointer;
+       &:hover {
+      background-color: #f1f1f1;
+    }
+  }
+}
+
+
+
