fixed router and logout

--- a/frontend/src/templates/auth/login.html
+++ b/frontend/src/templates/auth/login.html
@@ -23,7 +23,7 @@
                             <span class="input-group-text" id="basic-addon2">
                                 <i class="fas fa-lock"></i>
                             </span>
-                                <input type="text" class="form-control is-invalid" id="password" placeholder="Пароль" aria-label="password"  required aria-describedby="basic-addon2">
+                                <input type="password" class="form-control is-invalid" id="password" placeholder="Пароль" aria-label="password"  required aria-describedby="basic-addon2">
 <!--                                <div class="invalid-feedback">-->
 <!--                                    Пожалуйста, введите правильный пароль.-->
 <!--                                </div>-->
