--- a/frontend/src/templates/layout.html
+++ b/frontend/src/templates/layout.html
@@ -20,7 +20,7 @@
                                 <span class="ms-1 d-none d-sm-inline color-blue">Главная</span> </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link px-2 align-middle">
+                            <a href="/income-expense" class="nav-link px-2 align-middle">
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M11 15C13.2091 15 15 13.2091 15 11C15 8.79086 13.2091 7 11 7C8.79086 7 7 8.79086 7 11C7 13.2091 8.79086 15 11 15ZM16 11C16 13.7614 13.7614 16 11 16C8.23858 16 6 13.7614 6 11C6 8.23858 8.23858 6 11 6C13.7614 6 16 8.23858 16 11Z" fill="#052C65"/>
                                     <path d="M9.4375 11.9444C9.48519 12.5403 9.95568 13.0049 10.8013 13.0599V13.5H11.1764V13.0568C12.0507 12.9957 12.5625 12.5281 12.5625 11.8496C12.5625 11.2323 12.1715 10.9144 11.4721 10.7494L11.1764 10.6791V9.48105C11.5516 9.52384 11.79 9.72861 11.8472 10.0128H12.5053C12.4576 9.43826 11.9648 8.989 11.1764 8.9401V8.5H10.8013V8.94927C10.0542 9.02262 9.54559 9.47188 9.54559 10.1076C9.54559 10.6699 9.92389 11.0275 10.5533 11.1742L10.8013 11.2353V12.5067C10.4166 12.4487 10.1623 12.2378 10.1051 11.9444H9.4375ZM10.7981 10.5905C10.4294 10.5049 10.2291 10.3307 10.2291 10.0678C10.2291 9.77445 10.4453 9.5544 10.8013 9.49022V10.5905H10.7981ZM11.2305 11.3362C11.6787 11.4401 11.8854 11.6082 11.8854 11.9046C11.8854 12.2439 11.6279 12.4762 11.1764 12.5189V11.324L11.2305 11.3362Z" fill="#052C65"/>
@@ -35,16 +35,16 @@
                                 <span class="ms-1 d-none d-sm-inline color-blue category">Категории</span><i class="fas fa-chevron-down color-blue arrow-icon"></i> </a>
                             <ul class="collapse submenu-ul nav flex-column" id="submenu3" data-bs-parent="#menu">
                                 <li class="w-100">
-                                    <a href="categories/income" class="nav-link px-2"> <span class="d-none d-sm-inline color-blue">Доходы</span></a>
+                                    <a href="/income" class="nav-link px-2"> <span class="d-none d-sm-inline color-blue">Доходы</span></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="nav-link px-2"> <span class="d-none d-sm-inline color-blue">Расходы</span></a>
+                                    <a href="/expense" class="nav-link px-2"> <span class="d-none d-sm-inline color-blue">Расходы</span></a>
                                 </li>
 
                             </ul>
                         </li>
                     </ul>
-                    <div class="balance text-primary px mb-20"> <strong class="color-blue">Баланс: </strong> <span>500$</span>
+                    <div class="balance text-primary px mb-20"> <strong class="color-blue">Баланс: </strong> <span id="balance"></span>
                     </div>
                 </div>
                 <div class="custom-line"></div>
