trouble with finding elements with id balance and user-name

--- a/frontend/src/templates/category-income/incomes.html
+++ b/frontend/src/templates/category-income/incomes.html
@@ -5,7 +5,7 @@
 <!--                    <div class="category-incomes" id="category-incomes">-->
 <!--                        <div class="category-incomes-title">Депозиты</div>-->
 <!--                        <div class="incomes-button" >-->
-<!--                            <button type="button" class="btn btn-primary edit-button">Редактировать</button>-->
+<!--                            <button type="button" class="btn btn-primary edit-button"">Редактировать</button>-->
 <!--                            <button type="button" class="btn btn-danger delete-button">Удалить</button>-->
 <!--                        </div>-->
 
