changes in balance

--- a/frontend/src/styles/incomes.scss
+++ b/frontend/src/styles/incomes.scss
@@ -28,6 +28,7 @@
 }
 .category-incomes-image {
   width: 352px;
+  order: 1;
   border: 1px solid #CED4DA;
   border-radius: 10px;
   padding-left: 20px;
