changed income & edit-incomes

--- a/frontend/src/templates/category-income/edit-incomes.html
+++ b/frontend/src/templates/category-income/edit-incomes.html
@@ -1,12 +1,12 @@
 
-            <div class="col py-3  edit-incomes main-container">
+            <div class="col py-3  edit-incomes main-container" id="edit-incomes-form">
                 <div class="main-page-text">Редактирование категории доходов</div>
-                <div class="create-income-input ">
-                    <input type="text" class="form-control " placeholder="Зарплата">
+                <div class="create-income-input" >
+                    <input type="text" class="form-control " id="edit-incomes-title" placeholder="Зарплата">
                 </div>
                 <div class="create-incomes-buttons">
-                    <button type="button" class="btn btn-success">Сохранить</button>
-                    <button type="button" class="btn btn-danger">Отмена</button>
+                    <button type="button" class="btn btn-success" id="save-button">Сохранить</button>
+                    <button type="button" class="btn btn-danger" id="cancel-button">Отмена</button>
                 </div>
 
 
