--- a/frontend/src/templates/layout.html
+++ b/frontend/src/templates/layout.html
@@ -44,7 +44,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <div class="balance text-primary px mb-20"> <strong class="color-blue">Баланс: </strong> <span id="balance"></span>
+                    <div class="balance text-primary px mb-20"> <strong class="color-blue">Баланс: </strong> <span id="balance"></span><span>$</span>
                     </div>
                 </div>
                 <div class="custom-line"></div>
