--- a/frontend/src/templates/category-income/incomes.html
+++ b/frontend/src/templates/category-income/incomes.html
@@ -31,7 +31,7 @@
 <!--                        <button type="button" class="btn btn-danger">Удалить</button>-->
 <!--                    </div>-->
 <!--                    </div>-->
-                    <div class="category-incomes-image d-flex justify-content-center align-items-center">
+                    <div class="category-incomes-image d-flex justify-content-center align-items-center" id="add-category-button">
                         <svg class="plus" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M14.5469 6.08984V9.05664H0.902344V6.08984H14.5469ZM9.32422 0.511719V15.0039H6.13867V0.511719H9.32422Z" fill="#CED4DA"/>
                         </svg>
