changed incomes and expense

--- a/frontend/src/templates/category-income/create-incomes.html
+++ b/frontend/src/templates/category-income/create-incomes.html
@@ -1,11 +1,11 @@
-      <div class="col py-3  create-incomes main-container">
+      <div class="col py-3  create-incomes main-container" id="create-incomes-form">
         <div class="main-page-text">Создание категории доходов</div>
         <div class="create-income-input ">
-          <input type="text" class="form-control " placeholder="Название...">
+          <input type="text" class="form-control" id="create-incomes-title" placeholder="Название...">
         </div>
         <div class="create-incomes-buttons">
-          <button type="button" class="btn btn-success">Создать</button>
-          <button type="button" class="btn btn-danger">Отмена</button>
+          <button type="button" class="btn btn-success" id="create-button">Создать</button>
+          <button type="button" class="btn btn-danger" id="cancel-button">Отмена</button>
         </div>
 
 
