--- a/frontend/src/templates/category-income/edit-incomes.html
+++ b/frontend/src/templates/category-income/edit-incomes.html
@@ -1,5 +1,5 @@
 
-            <div class="col py-3  edit-incomes main-container" id="edit-incomes-form">
+            <div class="col py-3  edit-incomes main-container" id="edit-expense-form">
                 <div class="main-page-text">Редактирование категории доходов</div>
                 <div class="create-income-input" >
                     <input type="text" class="form-control " id="edit-incomes-title" placeholder="Зарплата">
