--- a/frontend/src/templates/category-expense/edit-expense.html
+++ b/frontend/src/templates/category-expense/edit-expense.html
@@ -1,11 +1,11 @@
 
-      <div class="col py-3  edit-incomes main-container">
+      <div class="col py-3  edit-incomes main-container" id="edit-incomes-form">
         <div class="main-page-text">Редактирование категории расходов</div>
         <div class="create-income-input ">
-          <input type="text" class="form-control " placeholder="Жильё">
+          <input type="text" class="form-control " id="edit-expense-title" placeholder="Жильё">
         </div>
         <div class="create-incomes-buttons">
-          <button type="button" class="btn btn-success">Сохранить</button>
-          <button type="button" class="btn btn-danger">Отмена</button>
+          <button type="button" class="btn btn-success" id="save-expense-button">Сохранить</button>
+          <button type="button" class="btn btn-danger" id="cancel-expense-button">Отмена</button>
         </div>
       </div>
