--- a/frontend/src/templates/income-expense/incomes-expense.html
+++ b/frontend/src/templates/income-expense/incomes-expense.html
@@ -27,7 +27,7 @@
                         </form>
                     </div>
                 </div>
-                <table class="table table-hover text-center">
+                <table class="table table-hover text-center" >
                     <thead>
                     <tr>
 
@@ -40,7 +40,7 @@
                         <th scope="col"></th>
                     </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="operations-tbody">
                     <tr>
                         <td >1</td>
                         <td>доход</td>
