fixed incomes&expense started income-expense

--- a/frontend/src/templates/category-expense/expense.html
+++ b/frontend/src/templates/category-expense/expense.html
@@ -58,7 +58,7 @@
                     </div>
 
 
-            <div class="overlay"></div>
+            <div class="overlay" id="overlay">
                 <div class="popup-container" id="popup-container">
                 <div class="popup-title">
                     Вы действительно хотите удалить категорию?
@@ -71,4 +71,5 @@
 
         </div>
     </div>
+  </div>
 </section>
