--- a/frontend/src/templates/category-income/incomes.html
+++ b/frontend/src/templates/category-income/incomes.html
@@ -41,7 +41,7 @@
         </div>
 
     </div>
-    <div class="overlay"></div>
+    <div class="overlay" id="overlay">
     <div class="popup-container" id="popup-container">
         <div class="popup-title">
             Вы действительно хотите удалить категорию?
@@ -52,4 +52,5 @@
             <button type="button" class="btn btn-danger" id="no-button">Не удалять</button>
         </div>
     </div>
+</div>
 </div>
