--- a/frontend/src/templates/income-expense/incomes-expense.html
+++ b/frontend/src/templates/income-expense/incomes-expense.html
@@ -41,30 +41,30 @@
                     </tr>
                     </thead>
                     <tbody id="operations-tbody">
-                    <tr>
-                        <td >1</td>
-                        <td>доход</td>
-                        <td>зарплата</td>
-                        <td>500$</td>
-                        <td>11.09.2022</td>
-                        <td></td>
-                        <td class="icon-container">
-                            <i class="fas fa-trash-alt mr-2"></i>
-                            <i class="fas fa-pencil-alt"></i>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>расход</td>
-                        <td>жильё</td>
-                        <td>2 500$</td>
-                        <td>12.09.2022</td>
-                        <td></td>
-                        <td class="icon-container">
-                            <i class="fas fa-trash-alt mr-1"></i>
-                            <i class="fas fa-pencil-alt mr-1"></i>
-                        </td>
-                    </tr>
+<!--                    <tr>-->
+<!--                        <td >1</td>-->
+<!--                        <td>доход</td>-->
+<!--                        <td>зарплата</td>-->
+<!--                        <td>500$</td>-->
+<!--                        <td>11.09.2022</td>-->
+<!--                        <td></td>-->
+<!--                        <td class="icon-container">-->
+<!--                            <i class="fas fa-trash-alt mr-2"></i>-->
+<!--                            <i class="fas fa-pencil-alt"></i>-->
+<!--                        </td>-->
+<!--                    </tr>-->
+<!--                    <tr>-->
+<!--                        <td>2</td>-->
+<!--                        <td>расход</td>-->
+<!--                        <td>жильё</td>-->
+<!--                        <td>2 500$</td>-->
+<!--                        <td>12.09.2022</td>-->
+<!--                        <td></td>-->
+<!--                        <td class="icon-container">-->
+<!--                            <i class="fas fa-trash-alt mr-1"></i>-->
+<!--                            <i class="fas fa-pencil-alt mr-1"></i>-->
+<!--                        </td>-->
+<!--                    </tr>-->
                     </tbody>
                 </table>
             </div>
