changed incomes-expense.js & create-income-expense.js

--- a/frontend/src/templates/income-expense/create-incomes-expense.html
+++ b/frontend/src/templates/income-expense/create-incomes-expense.html
@@ -29,8 +29,8 @@
                     </div>
                 </div>
                 <div class="create-incomes-buttons">
-                    <button type="button" class="btn btn-success">Создать</button>
-                    <button type="button" class="btn btn-danger">Отмена</button>
+                    <button type="button" class="btn btn-success" id="create-button">Создать</button>
+                    <button type="button" class="btn btn-danger" id="cancel-button">Отмена</button>
                 </div>
             </div>
         </div>
