--- a/frontend/src/templates/income-expense/incomes-expense.html
+++ b/frontend/src/templates/income-expense/incomes-expense.html
@@ -2,8 +2,8 @@
             <div class="col py-3 main-container">
                 <div class="incomes-costs-main-page-text">Доходы и расходы</div>
                 <div class="create-incomes-costs-button">
-                    <button type="button" class="btn btn-success">Создать доход</button>
-                    <button type="button" class="btn btn-danger">Создать расход</button>
+                    <button type="button" class="btn btn-success" id="create-income">Создать доход</button>
+                    <button type="button" class="btn btn-danger" id="create-expense">Создать расход</button>
                 </div>
                 <div class="incomes-costs-buttons d-flex align-items-baseline">
                     <button type="button" class="btn btn-outline-secondary">Сегодня</button>
