--- a/frontend/src/templates/income-expense/edit-incomes-expense.html
+++ b/frontend/src/templates/income-expense/edit-incomes-expense.html
@@ -1,16 +1,16 @@
 <div class="edit-incomes-costs-page">
             <div class="col py-3  create-incomes main-container">
                 <div class="main-page-text">Редактирование дохода и расхода</div>
-                <div class="create-income-input ">
-                    <input type="text" class="form-control " placeholder="Доход">
-                    <input type="text" class="form-control " placeholder="Зарплата">
-                    <input type="text" class="form-control " placeholder="500$">
-                    <input type="text" class="form-control " placeholder="11.09.2022">
-                    <input type="text" class="form-control " placeholder="Комментарий...">
+                <div class="create-income-input " id="edit-expense-form">
+                    <input type="text" id="edit-type" class="form-control " placeholder="Доход">
+                    <input type="text" id="edit-category" class="form-control " placeholder="Зарплата">
+                    <input type="text" id="edit-amount" class="form-control " placeholder="500$">
+                    <input type="text" id="edit-date" class="form-control " placeholder="11.09.2022">
+                    <input type="text" id="edit-comment" class="form-control " placeholder="Комментарий...">
                 </div>
                 <div class="create-incomes-buttons">
-                    <button type="button" class="btn btn-success">Создать</button>
-                    <button type="button" class="btn btn-danger">Отмена</button>
+                    <button type="button" class="btn btn-success" id="create-button">Создать</button>
+                    <button type="button" class="btn btn-danger" id="cancel-button">Отмена</button>
                 </div>
             </div>
         </div>
