create-incomes-expense

--- a/frontend/src/templates/income-expense/incomes-expense.html
+++ b/frontend/src/templates/income-expense/incomes-expense.html
@@ -6,7 +6,7 @@
                     <button type="button" class="btn btn-danger" id="create-expense">Создать расход</button>
                 </div>
                 <div class="incomes-costs-buttons d-flex align-items-baseline">
-                    <button type="button" class="btn btn-outline-secondary">Сегодня</button>
+                    <button type="button" class="btn btn-outline-secondary  active" >Сегодня</button>
                     <button type="button" class="btn btn-outline-secondary">Неделя</button>
                     <button type="button" class="btn btn-outline-secondary">Месяц</button>
                     <button type="button" class="btn btn-outline-secondary">Год</button>
