--- a/frontend/src/templates/income-expense/create-incomes-expense.html
+++ b/frontend/src/templates/income-expense/create-incomes-expense.html
@@ -11,9 +11,9 @@
                     </div>
                     <div class="mb-3">
                         <select class="form-select" id="typeSelectCategory">
-                            <option value="" disabled selected class="form-select-placeholder" >Категория...</option>
-                            <option value="food">Еда</option>
-                            <option value="housing">Жильё</option>
+<!--                            <option value="" disabled selected class="form-select-placeholder" >Категория...</option>-->
+<!--                            <option value="food">Еда</option>-->
+<!--                            <option value="housing">Жильё</option>-->
 
                         </select>
                     </div>
