--- a/frontend/src/templates/main.html
+++ b/frontend/src/templates/main.html
@@ -1,30 +1,28 @@
 <div class="main-page">
   <div class="col py-3 main-container">
                 <div class="main-page-text">Главная</div>
-                <div class="btn-container">
-                <button type="button" class="btn btn-outline-secondary">Сегодня</button>
-                <button type="button" class="btn btn-outline-secondary">Неделя</button>
-                <button type="button" class="btn btn-outline-secondary">Месяц</button>
-                <button type="button" class="btn btn-outline-secondary">Год</button>
-                <button type="button" class="btn btn-outline-secondary">Все</button>
-                <button type="button" class="btn btn-outline-secondary" id='interval-button'>Интервал</button>
-                        <div class=" date-range-container">
-                            <form>
-                                <div class="mb-3 d-flex align-items-center">
-                                    <span class="pe-3">с</span>
-                                    <input type="text" class="form-control date-input" id='date-from' placeholder="Дата" onfocus="(this.type='date')" onblur="(this.type='text')">
-                                </div>
-                            </form>
-                            <form>
-                                <div class="mb-3  d-flex align-items-center">
-                                    <span class="pe-3">по</span>
-                                    <input type="text" class="form-control date-input" id='date-to' placeholder="Дата" onfocus="(this.type='date')" onblur="(this.type='text')">
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-
-
+      <div class="incomes-costs-buttons d-flex align-items-baseline">
+          <button type="button" class="btn btn-outline-secondary  active" >Сегодня</button>
+          <button type="button" class="btn btn-outline-secondary">Неделя</button>
+          <button type="button" class="btn btn-outline-secondary">Месяц</button>
+          <button type="button" class="btn btn-outline-secondary">Год</button>
+          <button type="button" class="btn btn-outline-secondary">Все</button>
+          <button type="button" class="btn btn-outline-secondary" disabled id='interval-button'>Интервал</button>
+          <div class=" date-range-container d-flex align-items-baseline ">
+              <form id="date-range-form">
+                  <div class="mb-3 d-flex align-items-baseline">
+                      <span class="pe-3">с</span>
+                      <input type="text" class="form-control date-input" id='date-from' placeholder="Дата" onfocus="(this.type='date')" onblur="(this.type='text')">
+                  </div>
+              </form>
+              <form>
+                  <div class="mb-3  d-flex align-items-baseline">
+                      <span class="pe-3">по</span>
+                      <input type="text" class="form-control date-input" id='date-to' placeholder="Дата" onfocus="(this.type='date')" onblur="(this.type='text')">
+                  </div>
+              </form>
+          </div>
+      </div>
 
                 <div class="container mt-4">
                     <div class="charts">
